# ChangeLog for app-text/poppler
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.146 2007/11/11 11:03:51 armin76 Exp $

  11 Nov 2007; Raúl Porcel <armin76@gentoo.org> poppler-0.6.1-r1.ebuild:
  alpha/ia64 stable wrt security #196735

  10 Nov 2007; Daniel Gryniewicz <dang@gentoo.org> poppler-0.6.1-r1.ebuild:
  Marked stable on amd64 for bug #196735

  10 Nov 2007; Markus Rothe <corsair@gentoo.org> poppler-0.6.1-r1.ebuild:
  Stable on ppc64; bug #196735

  09 Nov 2007; Ferris McCormick <fmccor@gentoo.org> poppler-0.6.1-r1.ebuild:
  Sparc stable --- Security Bug #196735

  09 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  poppler-0.6.1-r1.ebuild:
  stable x86, security bug 196735

*poppler-0.6.1-r1 (08 Nov 2007)

  08 Nov 2007; Timo Gurr <tgurr@gentoo.org>
  +files/poppler-0.6.1-xpdf-3.02pl2.patch, +poppler-0.6.1-r1.ebuild:
  New revision poppler-0.6.1-r1, fixes security bug #196735.

*poppler-0.6.1 (12 Oct 2007)

  12 Oct 2007; Stefan Schweizer <genstef@gentoo.org> +poppler-0.6.1.ebuild:
  version bump

  06 Sep 2007; Stefan Schweizer <genstef@gentoo.org>
  -files/poppler-0.5.9-header.patch, -poppler-0.5.9-r1.ebuild,
  -poppler-0.5.91.ebuild:
  drop old

*poppler-0.6 (04 Sep 2007)

  04 Sep 2007; Stefan Schweizer <genstef@gentoo.org> +poppler-0.6.ebuild:
  version bump

  29 Aug 2007; Markus Rothe <corsair@gentoo.org> poppler-0.5.4-r2.ebuild:
  Stable on ppc64; bug #188863

  28 Aug 2007; Christoph Mende <angelos@gentoo.org> poppler-0.5.4-r2.ebuild:
  Stable on amd64 wrt security bug #188863

  28 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  poppler-0.5.4-r2.ebuild:
  ppc stable, bug #188863

  24 Aug 2007; Raúl Porcel <armin76@gentoo.org> poppler-0.5.4-r2.ebuild:
  alpha/ia64 stable wrt security #188863

  24 Aug 2007; Jeroen Roovers <jer@gentoo.org> poppler-0.5.4-r2.ebuild,
  poppler-0.5.91.ebuild:
  0.5.9-r1 back to ~hppa. 0.5.4-r2 stable for HPPA (bug #188863).
