@@ -3,10 +3,12 @@ AUX poppler-0.6.1-xpdf-3.02pl2.patch 17438 RMD160 c8a4bd0eda87f94b183fe0d0aa6d88
 AUX poppler-cve-2007-3387.patch 1028 RMD160 48b0007fe1779304e926634de123aaca01496dc0 SHA1 7179b5d4b0240e528150a471e54c219446dfc012 SHA256 883e08847dc9161d7065dc7725b293e3452fc45a9575017c0aa1eb1779ddc7d0
 DIST poppler-0.5.4.tar.gz 1062401 RMD160 f28c89b03388757067505df3c60a1d878626b0dd SHA1 edf4e4ff17ef86a7f60f097949ad7db53fa2c3b1 SHA256 ca0f880a4ff07391e99b443f0e7c9860241df6a6aaa327b9d811b358d94a29c9
 DIST poppler-0.6.1.tar.gz 1286501 RMD160 19496a6b3a5aeb7eca2f7edc2e957868880a90f4 SHA1 f28184df94fe6312db0a11e285d7832c3cfd0797 SHA256 d4fb2789bf880ce82b4f90f9e269409d81a804e7877265610494646e463d3ff2
+DIST poppler-0.6.2.tar.gz 1289454 RMD160 d582d9a22d87554a2226aa739cd37e64f3147b73 SHA1 3e367cab2ba110bfe42c3ab1036597410ad591da SHA256 1352b44bf030359b0bfc2422ca6da2a10ace125bfb742175e4ad97f1a14b5e1b
 DIST poppler-0.6.tar.gz 1228142 RMD160 ebdb3d0a38a573dfa2da52949225461dfa882aa9 SHA1 a40abb17b912d6ecd0e4ece609b74647b8d04279 SHA256 ef4bb8fd1bb4dffd5dc689509bf3e33260774550425ee78995a8d0297f76bfae
 EBUILD poppler-0.5.4-r1.ebuild 1276 RMD160 97eb5ef845db5aac5dc49233daef3c48e3b2c7bf SHA1 cb4600bb7f00191a2dc9678fa8102c32012b4134 SHA256 b88418b2425b4d5af814cd9a3b487d25a17f8b9ffed9ae484d675cbd4ffa0b77
 EBUILD poppler-0.5.4-r2.ebuild 1323 RMD160 8ff4bf1c1fd5e254a5545a055602b0af58a4993d SHA1 46514c5b4abd8bf008248e68592b1349fad12a06 SHA256 78a7f1554137bfed285e4634a3de6e5720b9cfaa0b758e14c0db43ec76db7963
-EBUILD poppler-0.6.1-r1.ebuild 1281 RMD160 0c7bb897067e384b5a1330447efdf6f219ea0862 SHA1 69e45670adb31ab73fd6afb8eff008be0846685f SHA256 136fa8a39207a8f79d922140dc052302684ae2691559d55dcee8a2b11440d707
+EBUILD poppler-0.6.1-r1.ebuild 1277 RMD160 f07eb91f0adcf5681eb70bc95f5f60cf25a814e8 SHA1 8dde8cfe4de7714a5416527c668930146cdf5036 SHA256 ef752ad0e7e530a22e230733fa534b0a73eb4807dbc3529e5a770277617f65b1
+EBUILD poppler-0.6.2.ebuild 1187 RMD160 89992006e26b88c16884de195992e7579d803e3d SHA1 b60ac9ec0fc8ce05425bdf146b53cddb3f7dd6c5 SHA256 a07769fad8cf7c22ccc6fe0ec3d91548acb4929b9d6a314f75cd6495e536175f
 EBUILD poppler-0.6.ebuild 1181 RMD160 7d494e9cf3f27a2628ea05117156b08439a1430c SHA1 af0630dbe002003cd504d3c984f961566fce9f6f SHA256 db69b6f64d18f2f5a2c0da44dddcde8f6bb6117f92d29321fab1fe7a3643a1c3
-MISC ChangeLog 19718 RMD160 10bff4cba5f793e6a40f19e4680cfa63c5e2ea39 SHA1 332358c1555299345d159407af9b673c0fed43d4 SHA256 5d08404dacb81a491398bad16df5a6a66102eb1be600a1f5e41a8a5de0c30c59
+MISC ChangeLog 19946 RMD160 a359dbec0c0525c1fa0c6d6b09a3d3ba21370a54 SHA1 18fa448122cefba5ce5a3b7f55029141f739be66 SHA256 89495d34df60239d96509ba3a4aa48b99d8279ad00e47a5af9db88b9d30eb878
 MISC metadata.xml 161 RMD160 1e5b1e42553c8869b93c4a5448e9a2a2ed9fe525 SHA1 209c6a46e4cdd891980115e42ba419e3799f8088 SHA256 7c85e6739a71f5bb23e8de36c88677d772946e61f7285892f7554e37bd2bca76
