@@ -1,10 +1,10 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/poppler-0.6.1-r1.ebuild,v 1.7 2007/11/12 12:05:57 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/poppler-0.6.2.ebuild,v 1.1 2007/11/12 19:07:27 genstef Exp $
 
 EAPI="prefix"
 
-inherit eutils libtool
+inherit libtool
 
 DESCRIPTION="PDF rendering library based on the xpdf-3.0 code base"
 HOMEPAGE="http://poppler.freedesktop.org/"
@@ -16,19 +16,13 @@ KEYWORDS="~amd64 ~ia64 ~mips ~sparc-solaris ~x86"
 IUSE="cjk jpeg zlib"
 
 RDEPEND=">=media-libs/freetype-2.1.8
-	media-libs/fontconfig
+	>=media-libs/fontconfig-2
 	cjk? ( app-text/poppler-data )
 	jpeg? ( >=media-libs/jpeg-6b )
 	dev-libs/libxml2
 	!app-text/pdftohtml"
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig"
-
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-	epatch "${FILESDIR}/${P}-xpdf-3.02pl2.patch"
-}
 
 src_compile() {
 	econf \
